# imgen

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
snapshots/: .gitkeep
src/: eval.py  model.py  train.py  train_dcgan.py  train_wgan_gp.py  train_wgan_wc.py
src/celeba/: train_wgan_gp.py
src/cifar10/: train_dcgan.py  train_wgan_gp.py  train_wgan_wc.py
src/gan/: datasets.py  dcgan.py  lipschitz.py  model.py  wgan_gp.py  wgan_wc.py
