[project]
name = "imgen-small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "matplot>=0.1.9",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true

[project.scripts]
train = "bin.train:main"
eval = "bin.eval:main"
